Move code to fragment and add other features
1. Moves main activity code to fragment
2. Creates tabs (home timeline and mentions timeline)
3. Creates profile activity

--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -29,7 +29,7 @@
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/ivProfileImage"
+            android:id="@+id/ivUserProfileImage"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginRight="10dp"
@@ -42,8 +42,8 @@
             android:id="@+id/tvFullName"
             android:autoLink="web"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/ivProfileImage"
-            android:layout_toEndOf="@+id/ivProfileImage"
+            android:layout_toRightOf="@+id/ivUserProfileImage"
+            android:layout_toEndOf="@+id/ivUserProfileImage"
             android:layout_marginRight="5dp"
             android:layout_marginEnd="5dp"/>
 
@@ -53,8 +53,8 @@
             android:text="@string/tweet_body"
             android:id="@+id/tvBody"
             android:layout_below="@+id/tvFullName"
-            android:layout_toRightOf="@+id/ivProfileImage"
-            android:layout_toEndOf="@+id/ivProfileImage"
+            android:layout_toRightOf="@+id/ivUserProfileImage"
+            android:layout_toEndOf="@+id/ivUserProfileImage"
             android:layout_marginBottom="5dp"/>
 
         <TextView
