--- a/app/src/main/res/menu/menu_timeline.xml
+++ b/app/src/main/res/menu/menu_timeline.xml
@@ -2,7 +2,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.codepath.apps.mysimpletweets.activities.TimelineActivity">
-    <item android:id="@+id/action_compose" android:title="@string/action_compose"
-        android:orderInCategory="100" app:showAsAction="always"
-        android:icon="@drawable/ic_action_compose"/>
+
+    <item
+        android:id="@+id/miprofile"
+        android:icon="@drawable/ic_profile"
+        android:orderInCategory="200"
+        android:title="@string/profile"
+        app:showAsAction="always"
+        android:onClick="onProfileView"/>
+
+    <item
+        android:id="@+id/action_compose"
+        android:icon="@drawable/ic_action_compose"
+        android:orderInCategory="100"
+        android:title="@string/action_compose"
+        app:showAsAction="always" />
 </menu>
