--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,42 +17,53 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="10dp">
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:id="@+id/ivUserProfileImage"
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="15dp"/>
+            android:id="@+id/rlUserNameAndImage">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="User Name"
-            android:id="@+id/tvUserName"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/ivUserProfileImage"
-            android:layout_toEndOf="@+id/ivUserProfileImage" />
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:id="@+id/ivUserProfileImage"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="15dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Tag line"
-            android:id="@+id/tvTagline"
-            android:layout_below="@+id/tvUserName"
-            android:layout_toRightOf="@+id/ivUserProfileImage"
-            android:layout_toEndOf="@+id/ivUserProfileImage" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="User Name"
+                android:id="@+id/tvUserName"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/ivUserProfileImage"
+                android:layout_toEndOf="@+id/ivUserProfileImage" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Tag line"
+                android:id="@+id/tvTagline"
+                android:layout_below="@+id/tvUserName"
+                android:layout_toRightOf="@+id/ivUserProfileImage"
+                android:layout_toEndOf="@+id/ivUserProfileImage"
+                android:layout_marginBottom="10dp"/>
+
+            </RelativeLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ivUserProfileImage"
+            android:layout_below="@+id/rlUserNameAndImage"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:id="@+id/llUserInfo">
