--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.codepath.apps.mysimpletweets.activities.ProfileActivity">
+    tools:context="com.codepath.apps.mysimpletweets.activities.ProfileActivity"
+    android:background="@android:color/white">
 
     <include
         layout="@layout/toolbar"
